Improve Authentication/Authorization code

--- a/www/js/core/templates/home.html
+++ b/www/js/core/templates/home.html
@@ -8,7 +8,7 @@
         <strong>markdown</strong>
       </p>
     </div>
-    <a href="#/geo_data" class="button button-energized button-block">Localizar serviços de saúde próximos</a>
+    <a href="#/app/geo_data" class="button button-balanced button-block">Localizar serviços de saúde próximos</a>
     <div class="button-bar">
       <a href="#/app/favorites" class="button button-stable button-block">Favoritos</a>
       <a href="#/app/history" class="button button-stable button-block">Histórico</a>
