--- a/www/js/core/templates/welcome.html
+++ b/www/js/core/templates/welcome.html
@@ -4,7 +4,7 @@
       <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i>
     </div>
     <div class="spacer" style="width: 300px; height: 37px;"></div>
-    <a ng-click="login()" ng-hide="isAuthenticated" class="button button-royal button-block">Entrar</a>
+    <a ng-click="login()" ng-hide="authInfo.isAuthenticated" class="button button-royal button-block">Entrar</a>
     <a href="#/app/geo_data" class="button button-stable button-block">Localizar serviços de saúde próximos</a>
   </ion-content>
 </ion-view>
