--- a/www/js/geodata/templates/geodata-collection.html
+++ b/www/js/geodata/templates/geodata-collection.html
@@ -1,7 +1,7 @@
 <ion-view title="Serviços próximos">
   <ion-content ui-scroll-viewport padding="false" class="has-header" overflow-scroll="true" >
     <ion-list>
-      <ion-item ui-scroll="item in datasource" is-loading="loading" padding="5" buffer-size="25" href="#/app/geo_data/{{ item.id }}">{{ item.name }} ({{ (item.distance / 1000).toFixed(3) }} km)</ion-item>
+      <ion-item ui-scroll="item in datasource" is-loading="loading" padding="5" buffer-size="25" href="#/app/geo_data/{{ item.id }}">{{ item.name }}</ion-item>
     </ion-list>
   </ion-content>
 </ion-view>
