Add comments view

--- a/www/js/geodata/templates/geodata.html
+++ b/www/js/geodata/templates/geodata.html
@@ -9,7 +9,7 @@
           <i class="icon ion-thumbsup"></i>
           Curtir
         </a>
-        <a class="tab-item" href="#">
+        <a class="tab-item" href="#/app/geo_data/{{ geodata.id }}/comments">
           <i class="icon ion-chatbox"></i>
           Comentar
         </a>
